// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ETH service connected to ganache v0 should send CID to local ganache server 1`] = `
Transaction {
  "chain": "eip155:1337",
  "txHash": "0x84cbf591f46d6772d8048ff6a97a4bb70c0ce9cb79673d99c4dd1c642becd570",
}
`;

exports[`ETH service with mock wallet build transaction request 1`] = `
{
  "data": "0x0f017112205d7fcd1a0999befdb062e6762c1f0f902f729b98304a2ef539412f53360d3d6a",
  "nonce": 5,
  "to": "abcd1234",
}
`;

exports[`ETH service with mock wallet insufficient funds error 1`] = `
{
  "data": "0x0f017112205d7fcd1a0999befdb062e6762c1f0f902f729b98304a2ef539412f53360d3d6a",
  "gasLimit": {
    "hex": "0x2710",
    "type": "BigNumber",
  },
  "maxFeePerGas": {
    "hex": "0x0834",
    "type": "BigNumber",
  },
  "maxPriorityFeePerGas": {
    "hex": "0x044c",
    "type": "BigNumber",
  },
  "nonce": 5,
  "to": "abcd1234",
}
`;

exports[`ETH service with mock wallet insufficient funds error 2`] = `
{
  "data": "0x0f017112205d7fcd1a0999befdb062e6762c1f0f902f729b98304a2ef539412f53360d3d6a",
  "gasLimit": {
    "hex": "0x2710",
    "type": "BigNumber",
  },
  "maxFeePerGas": {
    "hex": "0x0834",
    "type": "BigNumber",
  },
  "maxPriorityFeePerGas": {
    "hex": "0x044c",
    "type": "BigNumber",
  },
  "nonce": 5,
  "to": "abcd1234",
}
`;

exports[`ETH service with mock wallet single transaction attempt 1`] = `
{
  "chainId": "1337",
  "confirmations": 3,
  "from": "me",
  "hash": "0x12345abcde",
}
`;

exports[`ETH service with mock wallet single transaction attempt 2`] = `
Transaction {
  "blockNumber": 54321,
  "blockTimestamp": 54321000,
  "chain": "eip155:1337",
  "txHash": "0x12345abcde",
}
`;

exports[`ETH service with mock wallet single transaction attempt 3`] = `
{
  "data": "0x987654321",
  "gasLimit": {
    "hex": "0x2710",
    "type": "BigNumber",
  },
  "gasPrice": {
    "hex": "0x03e8",
    "type": "BigNumber",
  },
  "nonce": 5,
  "to": "abcd1234",
}
`;

exports[`ETH service with mock wallet successful mocked transaction 1`] = `
{
  "data": "0x0f017112205d7fcd1a0999befdb062e6762c1f0f902f729b98304a2ef539412f53360d3d6a",
  "gasLimit": {
    "hex": "0x2710",
    "type": "BigNumber",
  },
  "maxFeePerGas": {
    "hex": "0x07d0",
    "type": "BigNumber",
  },
  "maxPriorityFeePerGas": {
    "hex": "0x03e8",
    "type": "BigNumber",
  },
  "nonce": 5,
  "to": "abcd1234",
}
`;

exports[`setGasPrice EIP1559 transaction 1`] = `
{
  "data": "0x0f017112205d7fcd1a0999befdb062e6762c1f0f902f729b98304a2ef539412f53360d3d6a",
  "gasLimit": {
    "hex": "0x0a",
    "type": "BigNumber",
  },
  "maxFeePerGas": {
    "hex": "0x07d0",
    "type": "BigNumber",
  },
  "maxPriorityFeePerGas": {
    "hex": "0x03e8",
    "type": "BigNumber",
  },
  "nonce": undefined,
  "to": "abcd1234",
}
`;

exports[`setGasPrice EIP1559 transaction 2`] = `
{
  "data": "0x0f017112205d7fcd1a0999befdb062e6762c1f0f902f729b98304a2ef539412f53360d3d6a",
  "gasLimit": {
    "hex": "0x0a",
    "type": "BigNumber",
  },
  "maxFeePerGas": {
    "hex": "0x0834",
    "type": "BigNumber",
  },
  "maxPriorityFeePerGas": {
    "hex": "0x044c",
    "type": "BigNumber",
  },
  "nonce": undefined,
  "to": "abcd1234",
}
`;

exports[`setGasPrice EIP1559 transaction 3`] = `
{
  "data": "0x0f017112205d7fcd1a0999befdb062e6762c1f0f902f729b98304a2ef539412f53360d3d6a",
  "gasLimit": {
    "hex": "0x0a",
    "type": "BigNumber",
  },
  "maxFeePerGas": {
    "hex": "0x08a2",
    "type": "BigNumber",
  },
  "maxPriorityFeePerGas": {
    "hex": "0x04ba",
    "type": "BigNumber",
  },
  "nonce": undefined,
  "to": "abcd1234",
}
`;

exports[`setGasPrice legacy transaction 1`] = `
{
  "data": "0x0f017112205d7fcd1a0999befdb062e6762c1f0f902f729b98304a2ef539412f53360d3d6a",
  "gasLimit": {
    "hex": "0x0a",
    "type": "BigNumber",
  },
  "gasPrice": {
    "hex": "0x03e8",
    "type": "BigNumber",
  },
  "nonce": undefined,
  "to": "abcd1234",
}
`;

exports[`setGasPrice legacy transaction 2`] = `
{
  "data": "0x0f017112205d7fcd1a0999befdb062e6762c1f0f902f729b98304a2ef539412f53360d3d6a",
  "gasLimit": {
    "hex": "0x0a",
    "type": "BigNumber",
  },
  "gasPrice": {
    "hex": "0x044c",
    "type": "BigNumber",
  },
  "nonce": undefined,
  "to": "abcd1234",
}
`;

exports[`setGasPrice legacy transaction 3`] = `
{
  "data": "0x0f017112205d7fcd1a0999befdb062e6762c1f0f902f729b98304a2ef539412f53360d3d6a",
  "gasLimit": {
    "hex": "0x0a",
    "type": "BigNumber",
  },
  "gasPrice": {
    "hex": "0x04ba",
    "type": "BigNumber",
  },
  "nonce": undefined,
  "to": "abcd1234",
}
`;
